change background color and add correct flower names

--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
       <h1>Flowers of Hiroshi Otsuka</h1>
     </div>
    <div class="containerzero">
-    <img src="home/hapalua/Desktop/Flowers/lotus-g433a3c929_1920.jpg" alt="flower" width=500px; height=200px;>
+     <img src="https://lh3.googleusercontent.com/JQa00bn06XbDYl4ZxhxxC3Hi3qMF3phU_EVOlLYYtU_9cOTm7rktvA_bCnqRqhoDzdC377mIU6oxUbcVeqy4QFRxp2FLAHlyW1rzjeyG9Dgs3Yhao1B4k16O03dgIqWPmFLC1x9tfw=w600-h315-p-k" height=200px width=550px /> 
    </div>
 
-
+   
    <div class="container1">
-    <img src="home/hapalua/Desktop/Flowers/IMG_0799.JPG" alt="flower" width= 150px; height= 150px;>
-    <img src="home/hapalua/Desktop/Flowers/IMG_0805.JPG" alt="flower" width=150px; height=150px;>
-    <img src="home/hapalua/Desktop/Flowers/673069AE-0220-4F4F-897D-5D361300B638.jpeg" alt="flower" width=150px; height=150px;>
+    <img src="https://lh3.googleusercontent.com/-VaJgSUWDY5LS5UD_jsCtM5VPr_WGQ431Elrz8Hq8VS7_r6ciyN1kjvfz4TjN2uOU-qtNpwjVuZ47SIytgsCInbY__r-NignSMtq3SZOpMj_Hmzkwr-tMhlKo1tMSBjvBFfk7r1N0w=w600-h315-p-k" alt="flower" width=150px; height=150px/>
+    <img src="https://lh3.googleusercontent.com/UasjOp797h2pqWDIAkNe4RuxfwMLPA2FPkP8MBM0MzARV6QvIttBqJGsebu1ub_XOKmljXWGueS0_26Gy_hpM63kd4dP8ZdCBBiNtLLAn165hE-V85iiEsjK8dZxqFodoPbsBI1hig=w600-h315-p-k" alt="flower" width=150px; height=150px/> 
+    <img src="https://lh3.googleusercontent.com/lup2T1gaEoLfpipxVo0AqWWfKoBokwSspHzFbGIKSuH-T7dQxO4o4qIyoee1P0y29vCXhRzd-0EN54ghtITD-XqFQFqo4TmyxeDk4MZz6wiqv-JOE9dnbKj6o07kqHXFX2eIlE6ILg=w600-h315-p-k" alt="flower" width=150px; height=150px/> 
    </div>
 
    <div class="container2">
-      <p>yellow flower</p>
-      <p>pink flower</p>
-      <p>green flower</p>
+      <p>Campanula trachelium</p>
+      <p>Azolla filiculoides</p>
+      <p>Agapanthus praecox</p>
    </div>
 
    <div class="container3">
